[package]
name = "pipe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "3.0.0"
hyper = { version = "0.14.x", features = ["full"] }
http = "0.2.x"
serde = { version = "1.0.x", features = ["derive"] }
serde_json = "1.0.x"

